# cargo-tidy

./: .travis.yml  Cargo.toml  README.md  tidy-config.md.toml  tidy-config.rs.toml  tidy-config.toml  tidy-config.toml.toml
src/: config.rs  main.rs  utils.rs
src/check/: forbidden_content.rs  indentation_style.rs  max_line_length.rs  mod.rs
