[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Run easily configurable style checks on your project"
keywords = ["cargo", "tidy", "line", "length", "ci", "travis", "check"]
license = "CC0-1.0"
name = "cargo-tidy"
repository = "https://github.com/jonas-schievink/cargo-tidy.git"
version = "0.1.0"

[dependencies]
clap = "2.14.0"
env_logger = "0.3.5"
glob = "0.2.11"
log = "0.3.6"
regex = "0.1.77"
rustc-serialize = "0.3.19"
toml = "0.2.1"
