[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Run easily configurable style checks on your project"
keywords = ["cargo", "tidy", "ci", "style", "check"]
license = "CC0-1.0"
name = "cargo-tidy"
repository = "https://github.com/jonas-schievink/cargo-tidy.git"
version = "0.1.0"

[dependencies]
clap = "2"
env_logger = "0.3"
glob = "0.2"
log = "0.3"
regex = "0.2"
toml = "0.3"
serde = "0.9"
serde_derive = "0.9"
